# mntbooks2

./: .gitignore  Cargo.toml  README.md  generate_schema_and_models.sh  mntconfig.toml.default
migrations/2020-07-14-112358_create_invoices/: down.sql  up.sql
scripts/: export-import.sh  mntbooks-legacy-export.sql  mntbooks-legacy-import.sql
scripts/bank-import/: bank-legacy-import.py  bank-psd2.py  paypal.rb
scripts/sqlite-uuid/: build.sh
src/: bookingdocs.rs  bookings.rs  documentimages.rs  documents.rs  invoices.rs  lib.rs  main.rs  mntconfig.rs  models.rs  routes_invoices.rs  schema.rs  util.rs
src/routes/: bookingdocs.rs  bookings.rs  bookings_datev.rs  documentimages.rs  documents.rs  invoices.rs  mod.rs
static/css/: document-form.css  style.css
static/docs/: index.html
templates/: booking_edit.html  bookings.html  document.html  document_new.html  documentimages.html  documentimages_details.html  documents.html  invoice.html  invoice_new.html  invoices.erb  invoices.html  macros.html  new_invoice.erb
