[package]
name = "mntbooks"
version = "2.0.0"
authors = ["Lukas F. Hartmann <lukas@mntre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"

