[package]
name = "mntbooks"
version = "2.0.0"
authors = ["Lukas F. Hartmann <lukas@mntre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-web = "2.0.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.7"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.7.0"
tera = "1"
toml = "0.5.6"
chrono = "0.4.13"
uuid = { version = "0.8.0", features = ["v4"] }
csv = "1.1.3"
random-integer = "1.2.1"
bytes = "0.5.6"
base64 = "0.12.3"
rust_decimal = "1.8.1"
encoding_rs = "0.8.24"
regex = "1.3.9"
paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", features = ["actix"] }
tempfile = "3.1.0"
